# nibac

./: .gitignore  CMakeLists.txt  README.md  nibac.cbp
core/: baclibrary.h  bacoptions.cpp  bacoptions.h  block.h  blockgroup.h  branchingscheme.h  cliquecutproducer.cpp  closestvaluebranchingscheme.h  commandlineprocessing.h  common.h  constraint.cpp  cplexsolver.cpp  cutproducer.cpp  cutproducer.h  defaultsolutionmanager.cpp  formulation.h  graph.h  isomorphismcutproducer.cpp  isomorphismcutproducer.h  lexicographicvariableorder.h  lowestindexbranchingscheme.cpp  lowestindexbranchingscheme.h  lpsolver.cpp  lpsolver.h  margotbac.h  margotbacoptions.cpp  margotbacoptions.h  matrix.h  nibacexception.h  nodestack.cpp  nodestack.h  permutationpool.h  randomvariableorder.cpp  rankedbranchingscheme.cpp  rankedbranchingscheme.h  schreiersimsgroup.cpp  schreiersimsgroup.h  solutionmanager.h  subsetproducer.cpp  util.cpp  (+1 more)
examples/design/: Makefile  colexicographicvariableorder.h  design.cpp  design.h  specialcliquecutproducer.cpp  specialcliquecutproducer.h
examples/incidencematrixdesign/: Makefile  incidencematrixdesign.cpp  incidencematrixdesign.h
examples/intersectingsetsystems/: Makefile  colexicographicvariableorder.cpp  intersectingsetsystem.cpp  intersectingsetsystem.h
examples/vca/: ASC.cpp  ASC.h  Makefile  VCA.cpp  VCA.h
examples/vca/STS/: PSTS5-1  PSTS6-1  STS13-1  STS13-2  STS15-1  STS15-10  STS15-11  STS15-12  STS15-13  STS15-14  STS15-15  STS15-16  STS15-17  STS15-18  STS15-19  STS15-2  STS15-20  STS15-21  STS15-22  STS15-23  STS15-24  STS15-25  STS15-26  STS15-27  STS15-28  STS15-29  STS15-3  STS15-30  STS15-31  STS15-32  STS15-33  STS15-34  STS15-35  STS15-36  STS15-37  STS15-38  STS15-39  STS15-4  STS15-40  STS15-41  (+44 more)
examples/vscycle/: Makefile  vscycle.cpp  vscycle.h
src/: CMakeLists.txt  Makefile  bac.cpp  bac.h  bacoptions.cpp  bacoptions.h  bitstring.cpp  bitstring.h  block.cpp  block.h  blockgroup.cpp  blockgroup.h  branchingscheme.cpp  branchingscheme.h  cliquecutproducer.cpp  cliquecutproducer.h  closestvaluebranchingscheme.cpp  closestvaluebranchingscheme.h  column.cpp  column.h  commandlineprocessing.cpp  commandlineprocessing.h  common.h.in  constraint.cpp  constraint.h  cplexsolver.cpp  cplexsolver.h  cutproducer.cpp  cutproducer.h  defaultsolutionmanager.cpp  defaultsolutionmanager.h  formulation.cpp  formulation.h  generatedgroup.cpp  generatedgroup.h  glpksolver.cpp  glpksolver.h  graph.cpp  graph.h  group.cpp  (+55 more)
src_extern/nauty22/: README.md  configure  install-sh  makefile  makefile.in  nauty.c
